--- a/calclator.css
+++ b/calclator.css
@@ -1,14 +1,35 @@
 .calculatorStyle {
   width: 300px;
   height: 500px;
-  margin: auto;
+  margin: 20px auto;
   border-radius: 1em;
   padding: 20px;
   background-color: black;
   box-shadow: 2px 2px 2px 2px blue;
   position: relative;
 }
-
+.history-clear{
+  position: absolute;
+  right: 20px;
+  background: red;
+  padding: 3px;
+  border-bottom-left-radius: 3px;
+}
+.history-clear:hover{
+  background-color: brown;
+  color: whitesmoke;
+}
+.cursor-style{
+  cursor: pointer;
+}
+.history-bg{
+  background-color: lavender;
+  height: 110px;
+  overflow: auto;
+}
+.container{
+padding-top: 10px;
+}
 #btn {
   width: 60px;
   height: 50px;
